# reptool

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  django.yml  python-app.yml
web/locale/ru/LC_MESSAGES/: django.po
web/static/css/: main.css
web/team/: admin.py  forms.py  lib.py  middleware.py  models.py  tests.py  urls.py  views.py
web/team/management/commands/: export.py
web/team/migrations/: 0001_initial.py  0002_auto_20200123_2038.py  0003_auto_20200124_1748.py  0004_auto_20200124_2028.py  0005_report_delegation.py  0006_auto_20200201_1556.py  0007_worker_dashboard.py  0008_worker_no_export.py  0009_alter_worker_options_worker_disabled.py  0010_alter_worker_options_worker_order.py  0011_rename_iteration_start_stop_start_stop_idx.py  0012_rename_start_stop_idx_start_stop_index_and_more.py
web/team/templates/: base.html
web/team/templates/flatpages/: default.html
web/team/templates/team/: export.txt  iteration.html  iterations.html
web/web/: settings.py  urls.py
