[project]
name = "reptool"
version = "1.1.9"
description = "Team work report tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.2",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = true
